WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
89768
[chromium] Correctly reject accelerated animations with certain rotations.
https://bugs.webkit.org/show_bug.cgi?id=89768
Summary
[chromium] Correctly reject accelerated animations with certain rotations.
vollick
Reported
2012-06-22 10:35:27 PDT
We cannot currently accelerate rotations that are >= 180 because of the way that we handle blending. The code that currently handles this is not in the right spot, nor is it quite suited to our needs.
Attachments
Patch
(6.57 KB, patch)
2012-06-22 10:38 PDT
,
vollick
no flags
Details
Formatted Diff
Diff
Patch
(6.57 KB, patch)
2012-06-22 10:49 PDT
,
vollick
no flags
Details
Formatted Diff
Diff
Patch
(9.95 KB, patch)
2012-06-22 12:29 PDT
,
vollick
no flags
Details
Formatted Diff
Diff
Patch
(9.96 KB, patch)
2012-06-22 12:31 PDT
,
vollick
no flags
Details
Formatted Diff
Diff
Patch
(9.95 KB, patch)
2012-06-22 12:38 PDT
,
vollick
no flags
Details
Formatted Diff
Diff
Patch for landing
(10.04 KB, patch)
2012-07-03 10:50 PDT
,
vollick
no flags
Details
Formatted Diff
Diff
Show Obsolete
(5)
View All
Add attachment
proposed patch, testcase, etc.
vollick
Comment 1
2012-06-22 10:38:23 PDT
Created
attachment 149052
[details]
Patch
WebKit Review Bot
Comment 2
2012-06-22 10:40:57 PDT
Attachment 149052
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCor..." exit_code: 1 Source/WebCore/platform/graphics/chromium/AnimationTranslationUtil.cpp:170: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
vollick
Comment 3
2012-06-22 10:49:18 PDT
Created
attachment 149059
[details]
Patch Make the style bot happy.
James Robinson
Comment 4
2012-06-22 11:50:17 PDT
Comment on
attachment 149059
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=149059&action=review
> Source/WebCore/ChangeLog:8 > + No new tests. Functionality covered by existing tests.
which tests?
vollick
Comment 5
2012-06-22 12:29:43 PDT
Created
attachment 149083
[details]
Patch There was a test for large rotations, but added new tests for cases the old code did not deal with.
vollick
Comment 6
2012-06-22 12:31:20 PDT
Created
attachment 149084
[details]
Patch Sorry for the spam. Last patch was a dud.
Dana Jansens
Comment 7
2012-06-22 12:32:46 PDT
Comment on
attachment 149084
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=149084&action=review
> Source/WebCore/platform/graphics/chromium/AnimationTranslationUtil.cpp:140 > +bool causesRotationOfMoreThan180Degrees(const TransformAnimationValue* value, const TransformAnimationValue* lastValue)
bikeshed: AtLeast180Degrees?
vollick
Comment 8
2012-06-22 12:38:16 PDT
Created
attachment 149085
[details]
Patch
> bikeshed: AtLeast180Degrees?
SG. Done.
vollick
Comment 9
2012-07-03 10:50:51 PDT
Created
attachment 150642
[details]
Patch for landing
WebKit Review Bot
Comment 10
2012-07-03 12:17:58 PDT
Comment on
attachment 150642
[details]
Patch for landing Rejecting
attachment 150642
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 Last 500 characters of output: hanize/_urllib2_fork.py", line 332, in _call_chain result = func(*args) File "/mnt/git/webkit-commit-queue/Tools/Scripts/webkitpy/thirdparty/autoinstalled/mechanize/_urllib2_fork.py", line 1170, in https_open return self.do_open(conn_factory, req) File "/mnt/git/webkit-commit-queue/Tools/Scripts/webkitpy/thirdparty/autoinstalled/mechanize/_urllib2_fork.py", line 1118, in do_open raise URLError(err) urllib2.URLError: <urlopen error [Errno -3] Temporary failure in name resolution> Full output:
http://queues.webkit.org/results/13127575
WebKit Review Bot
Comment 11
2012-07-04 05:58:17 PDT
Comment on
attachment 150642
[details]
Patch for landing Clearing flags on attachment: 150642 Committed
r121844
: <
http://trac.webkit.org/changeset/121844
>
WebKit Review Bot
Comment 12
2012-07-04 05:58:22 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug