[chromium] Correctly reject accelerated animations with certain rotations. https://bugs.webkit.org/show_bug.cgi?id=89768

Reviewed by James Robinson.

Source/WebCore:

UnitTests:
  GraphicsLayerChromiumTest.createTransformAnimationWithBigRotation
  GraphicsLayerChromiumTest.createTransformAnimationWithRotationInvolvingNegativeAngles
  GraphicsLayerChromiumTest.createTransformAnimationWithSmallRotationInvolvingLargeAngles

* platform/graphics/chromium/AnimationTranslationUtil.cpp:
(WebCore::appendKeyframe):
(WebCore::isRotationType):
(WebCore):
(WebCore::causesRotationOfAtLeast180Degrees):
(WebCore::CCKeyframedTransformAnimationCurve):
(WebCore::createActiveAnimation):
* platform/graphics/chromium/GraphicsLayerChromium.cpp:
(WebCore::GraphicsLayerChromium::addAnimation):

Source/WebKit/chromium:

* tests/GraphicsLayerChromiumTest.cpp:
(WebKitTests::TEST_F):
(WebKitTests):


Canonical link: https://commits.webkit.org/108402@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@121844 268f45cc-cd09-0410-ab3c-d52691b4dbfc